Add teacher/admin features, assessment improvements and fix CORS